feat: Enhanced ZV Downloader with Files tab and improved content detection
- Added Files tab for detecting downloadable files (PDF, ZIP, RAR, DOC, TORRENT, etc.)
- Reorganized tabs: Info tab is now first and always active
- Added embedded video detection (YouTube, Vimeo, Twitch, etc.) with previews
- Added Base64 image support with proper MIME type detection
- Enhanced video thumbnails and platform-specific handling
- Improved content extraction for better file and media detection
- Updated UI to show file types, platform info, and visual previews

--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["success/index.html", "success/success.js", "maintenance/index.html", "popup.js"],
+      "resources": ["success/index.html", "success/success.js", "success/tabs.js", "success/pageAnalyzer.js", "success/displayManager.js", "success/downloader.js", "success/utils.js", "success/siteInfo.js", "maintenance/index.html", "popup.js"],
       "matches": ["<all_urls>"]
     }
   ]
